--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                 <h4 style="margin-bottom:15px;">サービス</h4>
                 <ul style="list-style:none;">
                     <li style="padding:6px 0;"><a href="#pricing" style="color:rgba(255,255,255,0.8);text-decoration:none;">料金プラン</a></li>
-                    <li style="padding:6px 0;"><a href="index.html" style="color:rgba(255,255,255,0.8);text-decoration:none;">電子書籍向けサービス</a></li>
+                    <li style="padding:6px 0;"><a href="https://obusuma-kenji.github.io/E-book_SongSupport/" style="color:rgba(255,255,255,0.8);text-decoration:none;">電子書籍向けサービス</a></li>
                 </ul>
             </div>
             <div>
